--- a/.github/workflows/task1.yaml
+++ b/.github/workflows/task1.yaml
@@ -7,4 +7,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: git branch
       - run: git rev-parse HEAD
-      - run: ls -lr
+      - run: ls -alr
