--- a/.github/workflows/task2.yaml
+++ b/.github/workflows/task2.yaml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - run: cd desktop-app
-      - run: npm ci
-      - run: npm test
+      - run: |
+            cd desktop-app
+            npm ci
+            npm test
