--- a/.github/workflows/task2.yaml
+++ b/.github/workflows/task2.yaml
@@ -9,6 +9,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: desktop-app/package-lock.json
       - run: |
             cd desktop-app
             npm ci
