--- a/.github/workflows/task3.yaml
+++ b/.github/workflows/task3.yaml
@@ -1,8 +1,8 @@
 name: learn-github-actions
 on:
   push:
-    paths:
-      - desktop-app/src/**/*.ts
+    paths: "desktop-app/src/**/*.ts"
+
 jobs:
   run-unit-tests:
     runs-on: ubuntu-latest
