fix(task3): try without path

--- a/.github/workflows/task3.yaml
+++ b/.github/workflows/task3.yaml
@@ -1,7 +1,7 @@
 name: learn-github-actions
 on:
   push:
-#    paths: "desktop-app/src/**.ts"
+    paths: "desktop-app/src/**.ts"
 
 jobs:
   run-unit-tests:
