--- a/.github/workflows/task4.yaml
+++ b/.github/workflows/task4.yaml
@@ -17,3 +17,7 @@ jobs:
           cd desktop-app
           npm ci
           xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
+      - uses: actions/upload-artifact@v4
+        with:
+          name: e2e-test-results
+          path: desktop-app/test-results/**
