--- a/.github/workflows/task4.yaml
+++ b/.github/workflows/task4.yaml
@@ -18,6 +18,7 @@ jobs:
           npm ci
           xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
       - uses: actions/upload-artifact@v4
+        if: failure()
         with:
           name: e2e-test-results
           path: desktop-app/test-results/**
