--- a/.github/workflows/task4.yaml
+++ b/.github/workflows/task4.yaml
@@ -18,8 +18,15 @@ jobs:
           npm ci
           xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run e2e
       - uses: actions/upload-artifact@v4
+        id: upload-artifact
         if: failure()
         with:
           name: e2e-test-results
           path: desktop-app/test-results/**
           retention-days: 7
+      - name: test
+        if: failure()
+        env:
+          JOB_CONTEXT:
+        run:
+          echo "xxx ${{ jobs.run-unit-tests.steps.upload-artifact }}"
