--- a/.github/workflows/task4.yaml
+++ b/.github/workflows/task4.yaml
@@ -27,4 +27,4 @@ jobs:
       - name: test
         if: failure()
         run: |
-          echo "xxx ${{ upload-artifact }}"
+          echo "xxx ${{ steps.upload-artifact.outputs.artifact-url }}"
